tests/build/fail/widget_new/property_already_set2.stderr
error: property `zero_ui::properties::margin` already set
 --> $DIR/property_already_set2.rs:6:30
  |
6 |         zero_ui::properties::margin = 0;
  |                              ^^^^^^
